Changes to shared layout. Almost done, still need to make sure that menus and sub menus scale on small screens' :w :WQ

--- a/IPGMMS/IPGMMS/Content/AdminPortalSharedLayout.css
+++ b/IPGMMS/IPGMMS/Content/AdminPortalSharedLayout.css
@@ -50,7 +50,8 @@
     }
 
         .w3-dropdown-content a:hover {
-            background-color: #f1f1f1;
+            background-color: #000080;
+            color: white;
         }
 
 
@@ -69,15 +70,22 @@
     padding-top: 10px;
     position: relative;
     display: inline-block;
+    width: 100%;
 }
+
+    .dropdown:hover a {
+        background-color: white;
+        color: black;
+    }
 
 .dropdown-content {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    min-width: 120px;
-    margin-left: 100px;
-    margin-top: -102px;
+    float: left;
+    min-width: 160px;
+    top: 20%;
+    left: 100%;
     overflow: inherit;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
@@ -87,10 +95,12 @@
         padding: 12px 16px;
         text-decoration: none;
         display: block;
+        font-size: medium;
     }
 
         .dropdown-content a:hover {
-            background-color: #f1f1f1;
+            background-color: #000080;
+            color: white;
         }
 
 .dropdown:hover .dropdown-content {
